fix: 리스트 수정을 위해 Array로 변경